--- a/settings.html
+++ b/settings.html
@@ -26,6 +26,16 @@ th{background:#004aad;color:#fff;}
 <header>نظام OMA - الإعدادات</header>
 <div class="wrap">
 
+<!-- إعدادات النسب -->
+<div class="card">
+  <strong>إعداد نسبة الأستاذ والمعهد</strong>
+  <label>نسبة الأستاذ (%)</label>
+  <input type="number" id="teacherPercent" min="0" max="100" placeholder="مثال: 60">
+  <label>نسبة المعهد (%)</label>
+  <input type="number" id="institutePercent" min="0" max="100" placeholder="مثال: 40">
+  <button class="btn" id="savePercentBtn">💾 حفظ النسب</button>
+</div>
+
 <!-- إنشاء مستخدم -->
 <div class="card">
   <strong>إضافة مستخدم جديد</strong>
@@ -61,7 +71,30 @@ th{background:#004aad;color:#fff;}
   </div>
 </div>
 
-<script>
+<script type="module">
+// 🔹 Firebase إعداد
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+import { getAuth, onAuthStateChanged, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
+  authDomain: "oma0.firebaseapp.com",
+  projectId: "oma0",
+  storageBucket: "oma0.appspot.com",
+  messagingSenderId: "774171603105",
+  appId: "1:774171603105:web:91f2a5f44c4dde684080e0"
+};
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+
+// 🔹 حماية الصفحة
+onAuthStateChanged(auth, user=>{
+  if(!user) window.location.href="login.html";
+});
+
 // ----- بيانات وهمية للاختبار -----
 let dummyStudents = ["أحمد علي","سارة محمد","محمد خالد"];
 let dummyTeachers = ["أستاذ علي","أستاذة ليلى","أستاذ كريم"];
@@ -81,17 +114,24 @@ userTypeSelect.addEventListener("change", updateNames);
 updateNames();
 
 // ----- إنشاء مستخدم جديد -----
-document.getElementById("userForm").addEventListener("submit", e=>{
+document.getElementById("userForm").addEventListener("submit", async e=>{
   e.preventDefault();
   const type = userTypeSelect.value;
   const name = userNameSelect.value;
   const email = document.getElementById("userEmail").value.trim();
-  if(!type || !name || !email){alert("اكمل جميع الحقول"); return;}
-  const user = {id:Date.now(),type,name,email};
-  usersData.push(user);
-  renderUsers();
-  e.target.reset();
-  updateNames();
+  const password = document.getElementById("userPassword").value.trim();
+  if(!type || !name || !email || !password){alert("اكمل جميع الحقول"); return;}
+
+  try{
+    const userCred = await createUserWithEmailAndPassword(auth,email,password);
+    const uid = userCred.user.uid;
+    await setDoc(doc(db,"users",uid), {name,type,email,teacherPercent:0});
+    usersData.push({id:uid,type,name,email});
+    renderUsers();
+    e.target.reset();
+    updateNames();
+    alert("تم إنشاء المستخدم بنجاح");
+  }catch(err){console.error(err); alert("حدث خطأ أثناء إنشاء المستخدم");}
 });
 
 // ----- عرض المستخدمين -----
@@ -103,8 +143,8 @@ function renderUsers(){
     const tr = document.createElement("tr");
     tr.innerHTML = `<td>${u.name}</td><td>${u.type}</td><td>${u.email}</td>
     <td>
-      <button class="btn small" onclick="editUser(${u.id})">✏️ تعديل</button>
-      <button class="btn warn small" onclick="deleteUser(${u.id})">🗑️ حذف</button>
+      <button class="btn small" onclick="editUser('${u.id}')">✏️ تعديل</button>
+      <button class="btn warn small" onclick="deleteUser('${u.id}')">🗑️ حذف</button>
     </td>`;
     usersTableBody.appendChild(tr);
   });
@@ -129,8 +169,16 @@ function editUser(id){
   usersData = usersData.filter(u=>u.id!==id);
 }
 
-// ----- فلترة ---
-document.getElementById("filterType").addEventListener("change", renderUsers);
+// ----- حفظ نسب الأستاذ والمعهد -----
+document.getElementById("savePercentBtn").addEventListener("click", async ()=>{
+  const tPercent = parseFloat(document.getElementById("teacherPercent").value) || 0;
+  const iPercent = parseFloat(document.getElementById("institutePercent").value) || 0;
+  if(tPercent + iPercent !== 100){ alert("مجموع النسب يجب أن يكون 100%"); return; }
+
+  // حفظ في Firebase ضمن وثيقة settings
+  await setDoc(doc(db,"settings","percentages"), {teacher:tPercent,institute:iPercent});
+  alert(`تم حفظ النسب: الأستاذ ${tPercent}% - المعهد ${iPercent}%`);
+});
 </script>
 </body>
 </html>
