--- a/teachers.html
+++ b/teachers.html
@@ -24,9 +24,18 @@ th{background:var(--primary);color:#fff;}
 .actions button{margin:0 4px;}
 .modal{position:fixed;left:0;top:0;right:0;bottom:0;background:rgba(0,0,0,0.45);display:none;align-items:center;justify-content:center;z-index:9999;}
 .modal.open{display:flex}
-.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto}
+.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto;}
 .filters{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:12px;}
 .filters select{flex:1;}
+/* تصميم احترافي للطباعة */
+@media print {
+  body{background:#fff;color:#000;}
+  table, th, td{border:1px solid #000;}
+  th, td{padding:8px;text-align:right;}
+  .btn{display:none;}
+  header{display:none;}
+  .modal .box{border:none;box-shadow:none;overflow:visible;}
+}
 </style>
 </head>
 <body>
@@ -67,10 +76,6 @@ th{background:var(--primary);color:#fff;}
       <div id="subjectsContainer"></div>
       <button type="button" id="addSubjectBtn" class="btn ghost small">➕ إضافة مادة</button>
     </div>
-    <label>إجمالي المستحقات من المعهد</label>
-    <input id="totalFees" type="number" min="0">
-    <label>نسبة الأستاذ (%)</label>
-    <input id="teacherPercent" type="number" min="0" max="100">
     <label>ملاحظات</label>
     <input id="note" type="text">
     <div style="display:flex;gap:8px;justify-content:flex-end;margin-top:8px">
@@ -83,12 +88,6 @@ th{background:var(--primary);color:#fff;}
 <!-- قائمة الأساتذة -->
 <div class="card">
   <strong>قائمة الأساتذة</strong>
-  <div class="filters">
-    <select id="filterStage"><option value="">فلترة حسب المرحلة</option></select>
-    <select id="filterGroup"><option value="">فلترة حسب الكروب</option></select>
-    <select id="filterSubject"><option value="">فلترة حسب المادة</option></select>
-    <button id="printListBtn" class="btn small">🖨️ طباعة القائمة</button>
-  </div>
   <table id="teachersTable">
     <thead>
       <tr>
@@ -97,8 +96,6 @@ th{background:var(--primary);color:#fff;}
         <th>المرحلة</th>
         <th>الكروب</th>
         <th>المواد</th>
-        <th>المستحقات</th>
-        <th>نسبة الأستاذ</th>
         <th>خيارات</th>
       </tr>
     </thead>
@@ -122,7 +119,7 @@ th{background:var(--primary);color:#fff;}
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, updateDoc, doc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
@@ -149,26 +146,10 @@ addSubjectBtn.addEventListener("click",()=>{
   div.classList.add("subject-field");
   div.innerHTML = `
     <input type="text" placeholder="اسم المادة" class="subjName" required />
-    <input type="number" placeholder="المستحق" class="subjFee" min="0" />
-    <button type="button" class="btn small addPaymentBtn">💰 دفعة</button>
     <button type="button" class="btn warn small removeSubjBtn">❌</button>
   `;
   subjectsContainer.appendChild(div);
-
   div.querySelector(".removeSubjBtn").addEventListener("click",()=>subjectsContainer.removeChild(div));
-
-  div.querySelector(".addPaymentBtn").addEventListener("click",()=>{
-    const payment = prompt("أدخل مبلغ الدفعة:");
-    if(payment && !isNaN(payment)){
-      const date = new Date().toLocaleDateString();
-      if(!div.payments) div.payments=[];
-      div.payments.push({amount:parseFloat(payment),date});
-      const feeInput = div.querySelector(".subjFee");
-      const remaining = parseFloat(feeInput.value) - parseFloat(payment);
-      feeInput.value = remaining>=0?remaining:0;
-      alert(`تم تسجيل الدفعة ${payment} بتاريخ ${date}`);
-    }
-  });
 });
 
 // حفظ الأستاذ
@@ -179,22 +160,20 @@ teacherForm.addEventListener("submit", async(e)=>{
   const address = document.getElementById("address").value.trim();
   const stage = document.getElementById("stage").value;
   const group = document.getElementById("group").value;
-  const totalFees = parseFloat(document.getElementById("totalFees").value)||0;
-  const teacherPercent = parseFloat(document.getElementById("teacherPercent").value)||0;
   const note = document.getElementById("note").value.trim();
 
   const subjects = [];
   document.querySelectorAll(".subject-field").forEach(sub=>{
     const subjName = sub.querySelector(".subjName").value.trim();
-    const subjFee = parseFloat(sub.querySelector(".subjFee").value)||0;
-    const payments = sub.payments||[];
-    if(subjName) subjects.push({name:subjName,fee:subjFee,payments});
+    if(subjName) subjects.push({name:subjName, payments:[], remaining:0});
   });
 
   if(subjects.length===0){ alert("أضف مادة واحدة على الأقل"); return;}
 
   try{
-    await addDoc(collection(db,"teachers"),{name,phone,address,stage,group,totalFees,teacherPercent,note,subjects,createdAt:new Date()});
+    await addDoc(collection(db,"teachers"),{
+      name, phone, address, stage, group, note, subjects, createdAt:new Date()
+    });
     alert("تم حفظ الأستاذ بنجاح");
     teacherForm.reset();
     subjectsContainer.innerHTML="";
@@ -211,80 +190,86 @@ async function loadTeachers(){
     snapshot.forEach(docSnap=>{
       const t = {...docSnap.data(),id:docSnap.id};
       teachersData.push(t);
-      const teacherShare = (t.totalFees * t.teacherPercent/100).toFixed(2);
       const tr = document.createElement("tr");
       tr.innerHTML = `
         <td>${t.name}</td>
         <td>${t.phone}</td>
         <td>${t.stage}</td>
         <td>${t.group}</td>
-        <td>${t.subjects.map(s=>`${s.name} (المتبقي:${s.fee})`).join("<br>")}</td>
-        <td>${t.totalFees}</td>
-        <td>${teacherShare}</td>
+        <td>${t.subjects.map(s=>s.name).join("<br>")}</td>
         <td class="actions">
           <button class="btn small" onclick="showTeacher('${t.id}')">🔍 التفاصيل</button>
-          <button class="btn warn small" onclick="deleteTeacher('${t.id}')">🗑️ حذف</button>
         </td>
       `;
       teachersTableBody.appendChild(tr);
     });
-  }catch(err){
-    console.error("خطأ في تحميل الأساتذة:",err);
-  } finally {
-    document.body.style.visibility="visible";
-  }
+  }catch(err){console.error(err);}
 }
 
-// حذف الأستاذ
-window.deleteTeacher = async function(id){
-  if(confirm("هل تريد حذف الأستاذ؟")){
-    try{ await deleteDoc(doc(db,"teachers",id)); }catch(e){console.error(e);}
-    loadTeachers();
-  }
-}
-
-// عرض التفاصيل والاستمارة
-window.showTeacher = function(id){
+window.showTeacher = async function(id){
   const t = teachersData.find(x=>x.id===id);
   if(!t) return;
   const modal = document.getElementById("modal");
   const body = document.getElementById("modalBody");
-  const teacherShare = (t.totalFees * t.teacherPercent/100).toFixed(2);
-  const instituteShare = (t.totalFees - teacherShare).toFixed(2);
-  body.innerHTML=`<div style="text-align:center">
-    <h2>🏫 شعار المعهد</h2>
+
+  let subjectsHtml = t.subjects.map((s,index)=>{
+    const remaining = s.remaining || 0;
+    return `
+      <div style="margin-bottom:6px">
+        <b>${s.name}</b> - المتبقي: ${remaining}
+        <button class="btn small addPaymentBtn" data-subject="${index}">💰 دفعة</button>
+        <div>الدفعات:<br>${(s.payments||[]).map(p=>p.amount+" بتاريخ "+p.date).join("<br>")}</div>
+      </div>
+    `;
+  }).join("");
+
+  body.innerHTML = `
     <h3>${t.name}</h3>
     <p>الهاتف: ${t.phone}</p>
     <p>المرحلة: ${t.stage}</p>
     <p>الكروب: ${t.group}</p>
     <p>العنوان: ${t.address}</p>
     <p>ملاحظات: ${t.note}</p>
-    <p>إجمالي المستحقات: ${t.totalFees}</p>
-    <p>نسبة الأستاذ: ${teacherShare}</p>
-    <p>حصة المعهد: ${instituteShare}</p>
     <h4>المواد والدفعات:</h4>
-    ${t.subjects.map(s=>`<b>${s.name}</b> - المستحق: ${s.fee}<br>الدفعات:<br>${s.payments.map(p=>p.amount+" بتاريخ "+p.date).join("<br>")}`).join("<hr>")}
-  </div>`;
+    ${subjectsHtml}
+  `;
+
   modal.classList.add("open");
-}
+
+  body.querySelectorAll(".addPaymentBtn").forEach(btn=>{
+    btn.addEventListener("click", async()=>{
+      const subIndex = btn.dataset.subject;
+      const payment = prompt("أدخل مبلغ الدفعة:");
+      if(payment && !isNaN(payment)){
+        const date = new Date().toLocaleDateString();
+        if(!t.subjects[subIndex].payments) t.subjects[subIndex].payments=[];
+        t.subjects[subIndex].payments.push({amount:parseFloat(payment),date});
+        t.subjects[subIndex].remaining = (t.subjects[subIndex].remaining||0) - parseFloat(payment);
+        if(t.subjects[subIndex].remaining < 0) t.subjects[subIndex].remaining = 0;
+        const docRef = doc(db,"teachers",t.id);
+        await updateDoc(docRef,{subjects:t.subjects});
+        showTeacher(t.id);
+        alert(`تم تسجيل الدفعة ${payment} بتاريخ ${date}`);
+      }
+    });
+  });
+};
 
 // إغلاق نافذة التفاصيل
-document.getElementById("closeModal").addEventListener("click",()=>{document.getElementById("modal").classList.remove("open")});
+document.getElementById("closeModal").addEventListener("click",()=>{document.getElementById("modal").classList.remove("open");});
 
 // طباعة استمارة الأستاذ
 document.getElementById("printTeacherBtn").addEventListener("click",()=>{
   const content = document.getElementById("modalBody").innerHTML;
-  const printWindow = window.open("","طباعة","height=600,width=800");
-  printWindow.document.write("<html><head><title>استمارة الأستاذ</title></head><body>"+content+"</body></html>");
-  printWindow.document.close();
-  printWindow.print();
-});
-
-// طباعة قائمة الأساتذة
-document.getElementById("printListBtn").addEventListener("click",()=>{
-  const content = document.getElementById("teachersTable").outerHTML;
-  const printWindow = window.open("","طباعة","height=600,width=800");
-  printWindow.document.write("<html><head><title>قائمة الأساتذة</title></head><body>"+content+"</body></html>");
+  const printWindow = window.open("","طباعة","height=700,width=900");
+  printWindow.document.write(`<html><head><title>استمارة الأستاذ</title>
+  <style>
+    body{font-family:'Cairo',sans-serif;direction:rtl;padding:20px;}
+    h3,h4{color:#004aad;}
+    table{width:100%;border-collapse:collapse;margin-top:10px;}
+    th,td{border:1px solid #000;padding:8px;text-align:right;}
+  </style>
+  </head><body>${content}</body></html>`);
   printWindow.document.close();
   printWindow.print();
 });
