--- a/login.html
+++ b/login.html
@@ -81,57 +81,58 @@ footer {
   <footer>© 2025 نظام OMA - جميع الحقوق محفوظة</footer>
 
   <script type="module">
-  import { app, auth } from "https://salahmam.github.io/OMA/firebase-config.js";
-  import { signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+    // استدعاء firebase من الملف الموحد
+    import { app, auth } from "https://salahmam.github.io/OMA/firebase-config.js";
+    import { signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
-  const emailInput = document.getElementById("email");
-  const passwordInput = document.getElementById("password");
-  const loginBtn = document.getElementById("loginBtn");
-  const errorMsg = document.getElementById("errorMsg");
+    const emailInput = document.getElementById("email");
+    const passwordInput = document.getElementById("password");
+    const loginBtn = document.getElementById("loginBtn");
+    const errorMsg = document.getElementById("errorMsg");
 
-  // ✅ تحقق إذا المستخدم مسجل دخول مسبقاً
-  onAuthStateChanged(auth, (user) => {
-    if (user) {
-      console.log("🔹 المستخدم مسجّل الدخول:", user.email);
-      window.location.href = "dashboard.html"; 
-    }
-  });
-
-  // 🎯 تسجيل الدخول
-  loginBtn.addEventListener("click", async () => {
-    const email = emailInput.value.trim();
-    const password = passwordInput.value.trim();
-
-    if (!email || !password) {
-      errorMsg.textContent = "الرجاء إدخال البريد الإلكتروني وكلمة المرور.";
-      return;
-    }
-
-    errorMsg.textContent = "";
-    loginBtn.disabled = true;
-    loginBtn.textContent = "جاري التحقق...";
-
-    try {
-      await signInWithEmailAndPassword(auth, email, password);
-      console.log("✅ تم تسجيل الدخول بنجاح");
-      errorMsg.style.color = "green";
-      errorMsg.textContent = "تم تسجيل الدخول بنجاح...";
-      setTimeout(() => {
-        window.location.href = "dashboard.html";
-      }, 1000);
-    } catch (error) {
-      loginBtn.disabled = false;
-      loginBtn.textContent = "دخول";
-      errorMsg.style.color = "red";
-      if (error.code === "auth/user-not-found") {
-        errorMsg.textContent = "المستخدم غير موجود.";
-      } else if (error.code === "auth/wrong-password") {
-        errorMsg.textContent = "كلمة المرور غير صحيحة.";
-      } else {
-        errorMsg.textContent = "حدث خطأ أثناء تسجيل الدخول.";
+    // ✅ تحقق إذا المستخدم مسجل دخول مسبقاً
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        console.log("🔹 المستخدم مسجّل الدخول:", user.email);
+        window.location.href = "dashboard.html"; // تعديل المسار إذا لزم
       }
-    }
-  });
-</script>
+    });
+
+    // 🎯 تسجيل الدخول
+    loginBtn.addEventListener("click", async () => {
+      const email = emailInput.value.trim();
+      const password = passwordInput.value.trim();
+
+      if (!email || !password) {
+        errorMsg.textContent = "الرجاء إدخال البريد الإلكتروني وكلمة المرور.";
+        return;
+      }
+
+      errorMsg.textContent = "";
+      loginBtn.disabled = true;
+      loginBtn.textContent = "جاري التحقق...";
+
+      try {
+        await signInWithEmailAndPassword(auth, email, password);
+        console.log("✅ تم تسجيل الدخول بنجاح");
+        errorMsg.style.color = "green";
+        errorMsg.textContent = "تم تسجيل الدخول بنجاح...";
+        setTimeout(() => {
+          window.location.href = "dashboard.html";
+        }, 1000);
+      } catch (error) {
+        loginBtn.disabled = false;
+        loginBtn.textContent = "دخول";
+        errorMsg.style.color = "red";
+        if (error.code === "auth/user-not-found") {
+          errorMsg.textContent = "المستخدم غير موجود.";
+        } else if (error.code === "auth/wrong-password") {
+          errorMsg.textContent = "كلمة المرور غير صحيحة.";
+        } else {
+          errorMsg.textContent = "حدث خطأ أثناء تسجيل الدخول.";
+        }
+      }
+    });
+  </script>
 </body>
 </html>
