--- a/login.html
+++ b/login.html
@@ -81,58 +81,75 @@ footer {
   <footer>© 2025 نظام OMA - جميع الحقوق محفوظة</footer>
 
   <script type="module">
-    // استدعاء firebase من الملف الموحد
-    import { app, auth } from "https://salahmam.github.io/OMA/firebase-config.js";
-    import { signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+  import { 
+    getAuth, 
+    signInWithEmailAndPassword,
+    onAuthStateChanged
+  } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
-    const emailInput = document.getElementById("email");
-    const passwordInput = document.getElementById("password");
-    const loginBtn = document.getElementById("loginBtn");
-    const errorMsg = document.getElementById("errorMsg");
+  // 🔹 إعدادات مشروعك الجديد
+  const firebaseConfig = {
+    apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
+    authDomain: "oma0-33cc0.firebaseapp.com",
+    projectId: "oma0-33cc0",
+    storageBucket: "oma0-33cc0.firebasestorage.app",
+    messagingSenderId: "899300774863",
+    appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
+    measurementId: "G-5CKWYQT9XZ"
+  };
 
-    // ✅ تحقق إذا المستخدم مسجل دخول مسبقاً
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        console.log("🔹 المستخدم مسجّل الدخول:", user.email);
-        window.location.href = "dashboard.html"; // تعديل المسار إذا لزم
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  const emailInput = document.getElementById("email");
+  const passwordInput = document.getElementById("password");
+  const loginBtn = document.getElementById("loginBtn");
+  const errorMsg = document.getElementById("errorMsg");
+
+  // ✅ تحقق إذا المستخدم مسجل دخول مسبقاً
+  onAuthStateChanged(auth, (user) => {
+    if (user) {
+      console.log("🔹 المستخدم مسجّل الدخول:", user.email);
+      window.location.href = "dashboard.html"; // تعديل المسار إذا لزم
+    }
+  });
+
+  // 🎯 تسجيل الدخول
+  loginBtn.addEventListener("click", async () => {
+    const email = emailInput.value.trim();
+    const password = passwordInput.value.trim();
+
+    if (!email || !password) {
+      errorMsg.textContent = "الرجاء إدخال البريد الإلكتروني وكلمة المرور.";
+      return;
+    }
+
+    errorMsg.textContent = "";
+    loginBtn.disabled = true;
+    loginBtn.textContent = "جاري التحقق...";
+
+    try {
+      await signInWithEmailAndPassword(auth, email, password);
+      console.log("✅ تم تسجيل الدخول بنجاح");
+      errorMsg.style.color = "green";
+      errorMsg.textContent = "تم تسجيل الدخول بنجاح...";
+      setTimeout(() => {
+        window.location.href = "dashboard.html";
+      }, 1000);
+    } catch (error) {
+      loginBtn.disabled = false;
+      loginBtn.textContent = "دخول";
+      errorMsg.style.color = "red";
+      if (error.code === "auth/user-not-found") {
+        errorMsg.textContent = "المستخدم غير موجود.";
+      } else if (error.code === "auth/wrong-password") {
+        errorMsg.textContent = "كلمة المرور غير صحيحة.";
+      } else {
+        errorMsg.textContent = "حدث خطأ أثناء تسجيل الدخول.";
       }
-    });
-
-    // 🎯 تسجيل الدخول
-    loginBtn.addEventListener("click", async () => {
-      const email = emailInput.value.trim();
-      const password = passwordInput.value.trim();
-
-      if (!email || !password) {
-        errorMsg.textContent = "الرجاء إدخال البريد الإلكتروني وكلمة المرور.";
-        return;
-      }
-
-      errorMsg.textContent = "";
-      loginBtn.disabled = true;
-      loginBtn.textContent = "جاري التحقق...";
-
-      try {
-        await signInWithEmailAndPassword(auth, email, password);
-        console.log("✅ تم تسجيل الدخول بنجاح");
-        errorMsg.style.color = "green";
-        errorMsg.textContent = "تم تسجيل الدخول بنجاح...";
-        setTimeout(() => {
-          window.location.href = "dashboard.html";
-        }, 1000);
-      } catch (error) {
-        loginBtn.disabled = false;
-        loginBtn.textContent = "دخول";
-        errorMsg.style.color = "red";
-        if (error.code === "auth/user-not-found") {
-          errorMsg.textContent = "المستخدم غير موجود.";
-        } else if (error.code === "auth/wrong-password") {
-          errorMsg.textContent = "كلمة المرور غير صحيحة.";
-        } else {
-          errorMsg.textContent = "حدث خطأ أثناء تسجيل الدخول.";
-        }
-      }
-    });
+    }
+  });
   </script>
 </body>
 </html>
