--- a/setup.html
+++ b/setup.html
@@ -34,31 +34,37 @@ pre {
   padding: 10px;
   border-radius: 8px;
   overflow-x: auto;
+  white-space: pre-wrap;
 }
 </style>
 </head>
 <body>
 
 <h2>🔧 إعداد قاعدة بيانات OMA (Firestore)</h2>
-<p>عند الضغط على الزر بالأسفل، سيتم إنشاء Collections الأساسية في Firestore.</p>
+<p>عند الضغط على الزر بالأسفل، سيتم إنشاء المجموعات الأساسية في قاعدة البيانات.</p>
 
 <div class="card">
   <button id="setupBtn">🚀 إنشاء البيانات الأساسية</button>
   <pre id="log"></pre>
 </div>
 
-<script type="module" src="https://salahmam.github.io/OMA/firebase-config.js"></script>
+<!-- ملاحظة: نستورد firebase-config.js باستخدام مسار مطلق لضمان التحميل على GitHub Pages -->
 <script type="module">
-import { db } from "./firebase-config.js";
+/* ------------- استيراد الإعدادات والوظائف المطلوبة ------------- */
+/* firebase-config.js يجب أن يكون في: https://salahmam.github.io/OMA/firebase-config.js
+   ومحتواه يجب أن يصدر (export) المتغيّر `db` (see note أدناه) */
+import { db } from "https://salahmam.github.io/OMA/firebase-config.js";
 import { setDoc, doc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
 const log = document.getElementById("log");
 const setupBtn = document.getElementById("setupBtn");
 
-function addLog(msg){ log.textContent += msg + "\\n"; }
+function addLog(msg){ log.textContent += msg + "\n"; }
 
 setupBtn.addEventListener("click", async ()=>{
-  addLog("⏳ جاري إنشاء المجموعات الأساسية...");
+  setupBtn.disabled = true;
+  setupBtn.textContent = "⏳ جاري التنفيذ...";
+  addLog("🔹 بدء إنشاء المجموعات الأساسية...");
 
   try {
     // 📘 Collection: students
@@ -67,24 +73,26 @@ setupBtn.addEventListener("click", async ()=>{
       address: "بغداد",
       phone: "0770000000",
       level: "المرحلة الأولى",
-      subjects: ["رياضيات", "علوم"],
+      group: "A1",
+      subjects: [
+        { name: "رياضيات", teacherId: "", fee: 0, remaining: 0, payments: [] },
+        { name: "علوم", teacherId: "", fee: 0, remaining: 0, payments: [] }
+      ],
       joinDate: "2025-11-07",
-      fees: 500000,
-      installments: [250000, 250000],
-      status: "نشط"
+      totalFees: 500000,
+      note: "",
+      createdAt: new Date()
     });
     addLog("✅ students collection تم إنشاؤه.");
 
     // 📗 Collection: teachers
     await setDoc(doc(db, "teachers", "example_teacher"), {
       name: "أستاذ كريم",
-      specialty: "رياضيات",
       phone: "0780000000",
-      salary: 800000,
-      percent: 60,
-      joinDate: "2025-11-07",
       address: "البصرة",
-      status: "نشط"
+      subjects: ["رياضيات"],
+      teacherPercent: 60,
+      createdAt: new Date()
     });
     addLog("✅ teachers collection تم إنشاؤه.");
 
@@ -93,20 +101,31 @@ setupBtn.addEventListener("click", async ()=>{
       name: "مدير النظام",
       email: "admin@oma.com",
       type: "admin",
-      createdAt: new Date().toISOString()
+      createdAt: new Date()
     });
     addLog("✅ users collection تم إنشاؤه.");
 
-    // 📒 Collection: settings
+    // 📒 Collection: settings (document: percentages)
     await setDoc(doc(db, "settings", "percentages"), {
       teacher: 60,
       institute: 40
     });
     addLog("✅ settings collection تم إنشاؤه.");
 
-    addLog("\\n🎉 تم إنشاء جميع المجموعات بنجاح!");
+    addLog("\n🎉 تم إنشاء جميع المجموعات بنجاح!");
+    setupBtn.textContent = "✅ تم الإنشاء بنجاح";
+    setupBtn.style.background = "#00b67a";
+
+    // ⏳ الانتقال بعد 3 ثوانٍ
+    addLog("\n➡️ سيتم تحويلك إلى لوحة التحكم خلال 3 ثوانٍ...");
+    setTimeout(()=>{
+      window.location.href = "dashboard.html";
+    }, 3000);
+
   } catch (e) {
-    addLog("❌ خطأ أثناء الإنشاء: " + e.message);
+    addLog("❌ خطأ أثناء الإنشاء: " + (e.message || e));
+    setupBtn.disabled = false;
+    setupBtn.textContent = "🚀 إعادة المحاولة";
   }
 });
 </script>
